# MOTCO

./: .gitignore  404.html  AGENTS.md  CLAUDE.md  README.md  flake.nix  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
api/cli/: index.html
api/pls/: index.html
api/sd/: index.html
api/simulations/: index.html
api/snf/: index.html
docs/: index.md  new-hire-roadmap.md
docs/api/: cli.md  pls.md  sd.md  simulations.md  snf.md
docs/superpowers/plans/: 2026-04-29-external-usability.md
docs/superpowers/specs/: 2026-04-29-external-usability-design.md
examples/: motco_example.ipynb
examples/data/toy/: contrast.json  expression.csv  latent_snf.csv  ls_means.csv  metadata.csv  methylation.csv  model_full.csv  model_reduced.csv  proteomics.csv  results_snf.json  truth.json
examples/trajectory_power_study/: README.md  smoke.json  study.json
new-hire-roadmap/: index.html
openspec/changes/: rung-ladder-conclusion.md
openspec/changes/add-pls-latent-integration/: design.md  proposal.md  tasks.md
openspec/changes/add-simulation-evaluation-harness/: proposal.md  tasks.md
openspec/changes/add-simulation-grid-orchestration/: design.md  tasks.md
openspec/changes/add-trajectory-power-study/: design.md  tasks.md
openspec/changes/characterize-geometry-specificity/: proposal.md  tasks.md
openspec/changes/fix-mvalue-integration-pipeline/: design.md  proposal.md  tasks.md
openspec/changes/mkdocs-api-docs/: tasks.md
openspec/changes/optimize-gpa-computation/: .openspec.yaml  design.md  proposal.md  tasks.md
openspec/changes/rigorous-generator-fidelity-validation/: design.md  proposal.md  tasks.md
openspec/changes/rung0-gaussian-existence-proof/: design.md  findings.md  proposal.md  tasks.md
openspec/changes/rung1-methylation-nonlinearity/: design.md  findings.md  proposal.md  tasks.md
openspec/changes/rung2-projector-crosstalk/: design.md  findings.md  proposal.md  tasks.md
openspec/changes/rung3-latent-space-crosstalk/: design.md  findings.md  proposal.md  tasks.md
openspec/changes/rung3-multiblock-concatenation/: design.md  findings.md  proposal.md
openspec/changes/rung4-cross-omic-coupling/: design.md  findings.md  proposal.md
openspec/specs/intersim-simulation-bridge/: spec.md
openspec/specs/module-contracts/: spec.md
openspec/specs/numpy-omics-generator/: spec.md
openspec/specs/plsda-nested-cv/: spec.md
openspec/specs/plsr-latent-space/: spec.md
openspec/specs/semisynthetic-trajectory-generator/: spec.md
openspec/specs/simulate-command/: spec.md
openspec/specs/simulation-evaluation-harness/: spec.md
openspec/specs/simulation-grid-orchestration/: spec.md
openspec/specs/trajectory-geometry-plot/: spec.md
openspec/specs/trajectory-mode-showcase/: spec.md
openspec/specs/trajectory-power-study/: spec.md
scripts/: compare_lsmeans.py  coupling_recovery_probe.py  fidelity_supplement.py  fidelity_visual.py  geometry_specificity_probe.py  latent_space_crosstalk_probe.py  linear_recovery_probe.py  lsmeans_obs.R  methylation_recovery_probe.py  motco_study.py  motco_study_array.sbatch  multiblock_recovery_probe.py  projector_recovery_probe.py  run_study_shard.py  time_estimate_difference.py  trajectory_showcase.py
search/: search_index.json
src/motco/: __init__.py  cli.py  viz.py
tests/: conftest.py  test_cli.py  test_coupling_recovery.py  test_design.py  test_fidelity_visual.py  test_generator.py  test_generator_fidelity.py  test_intersim.py  test_linear_recovery.py  test_methylation_recovery.py  test_multiblock_recovery.py  test_permutation.py  test_pls.py  test_pls_integration.py  test_projector_recovery.py  test_sd_expected_example1.py  test_sd_expected_example2.py  test_sd_smoke.py  test_semisynthetic.py  test_showcase.py  test_simulation_evaluation.py  test_simulation_grid.py  test_snf.py  test_specificity.py  test_specificity_latent_space.py  test_study_config.py  test_study_end_to_end.py  test_study_merge.py  test_study_report.py  test_study_sharding.py  test_study_summary.py  test_study_targets.py  test_toy_dataset.py  test_trajectory.py  test_validation.py  test_viz.py
tests/data/: evo_649_sm_example1.csv  evo_649_sm_example2.csv  intersim_fidelity_fixture.npz  intersim_realism_fixture.npz  results_example1.csv  results_example2.csv
(+135 files in other folders)
