[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "motco"
dynamic = ["version"]
description = "MOTCO: Multi-omics Trajectory Comparison — latent spaces (PLS, SNF) and group differences"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "MOTCO Authors" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "scipy>=1.9",
  "scikit-learn>=1.2",
]

[project.urls]
Homepage = "https://github.com/"  # update with real URL if available

[project.scripts]
motco = "motco.cli:main"

[tool.hatch.version]
path = "src/motco/__init__.py"

[tool.hatch.build.targets.wheel]
packages = [
  "src/motco",
]

[tool.hatch.build.targets.sdist]
include = [
  "src/motco",
  "README.md",
  "LICENSE",
  "pyproject.toml",
]
